# psicologaemoutradimensao

./: .coderabbit.yaml  .env  .env.example  .gitignore  .mcp.json  .replit  .vercelignore  AGENTS.md  API_DOCUMENTATION.md  CLAUDE.md  DESIGN.md  GEMINI.md  README.md  ROADMAP.md  crabbit.txt  eslint.config.mjs  jest.config.ts  knip.json  main.py  next.config.ts  package-lock.json  package.json  playwright.config.ts  pyproject.toml  repomix-output.xml  run.sh  tsconfig.json  vercel.json  vercel.ts
.claude/: settings.json
.claude/agents/: seo-analyzer.md
.claude/commands/: hooks.md  lint.md  npm-scripts.md  pre-deploy.md  refactor.md  wisp-revalidate.md
.clinerules/: docusaurus-expertise.md  docusaurus-workflow.md  ui-ux-design-principles.md
.github/workflows/: e2e.yml
__tests__/: config-domains.test.ts  config.test.ts  utils.test.ts
__tests__/api/: geocode.test.ts  revalidate.test.ts
__tests__/components/: blog-post-card.test.tsx  chart-form.test.tsx  day-results.test.tsx  footer.test.tsx  navbar.test.tsx
__tests__/features/: blog-service.test.ts  mapa-astral-query.test.ts  mapa-astral-service.test.ts  mapa-astral-share.test.ts  seu-dia-query.test.ts
api/: AGENTS.md  Pipfile  replit.md
app/: main.py
docs/: README.md  vercel.md
e2e/: blog.spec.ts  home.spec.ts  mapa-astral.spec.ts  navbar.spec.ts  seu-dia.spec.ts
frontend/: styles.css
playwright-report/: index.html
scripts/: generate-zodiac-icons-v2.js  generate-zodiac-icons.js  generate-zodiac-icons.py
src/: config.ts
website/: docusaurus.config.ts  package-lock.json  package.json
(+94 files in other folders)
